tests/sksl/errors/Ossfuzz37620.glsl
### Compilation failed:

error: 1: expected '(' to begin function call
1 error
